# MovieManeuver

./: .gitignore  CMakeLists.txt  COPYING_libwiiremote  LICENSE  README.md  buttonstate.cpp  inputmgr.cpp  inputmgr.hpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  manip.cpp  manip.hpp  manip_udemy.cpp  manip_udemy.hpp  manip_youtube.cpp  manip_youtube.hpp  padstate.cpp  padstate.hpp  vector.hpp  winop.cpp  winop.hpp
include/: wiiremote.h
lib/: libwiiremote.lib
src/: aux_enums.hpp  aux_func.hpp  axisstate.cpp  axisstate.hpp  axisstate2d.cpp  axisstate2d.hpp  axisstate_n.hpp  buttonstate.cpp  buttonstate.hpp  dg_diag_xinput.cpp  dg_diag_xinput.hpp  diag_wiimote.cpp  diag_wiimote.h  diag_wiimote.ui  diag_xinput.ui  input.cpp  input.hpp  input_def.hpp  inputmgr.cpp  inputmgr.hpp  inputmgr_base.cpp  inputmgr_base.hpp  inputmgr_wii.cpp  inputmgr_wii.hpp  inputmgr_xinput.cpp  inputmgr_xinput.hpp  keyaction.cpp  keyaction.hpp  keydetect.cpp  keydetect.hpp  keydiff.hpp  keyinput.cpp  keyinput.hpp  keymap.cpp  keymap.hpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  manip.cpp  (+30 more)
